# youtube-downloader-pro

./: .gitattributes  .gitignore  MANIFEST.in  PRIVACY_POLICY.md  README.md  TESTING_GUIDE.md  optimize_build.bat  pyproject.toml  requirements.txt  setup.bat  setup.sh  test.py  test_badges.py  youtube_downloader.spec
.kiro/steering/: fluent-icons.md  product.md  structure.md  tech.md
docs/: CANCELLATION_FIX.md  DOWNLOAD_STATUS_HANDLING.md  HISTORY_REALTIME_UPDATE.md  INTERFACE_REFACTOR.md  PROGRESS_ANALYSIS.md  PROGRESS_DEBUG_GUIDE.md  PROGRESS_STUCK_AT_100.md  TAB_STRUCTURE.md
installer_build/: README.md  build.bat  build_msi_only.bat
installer_build/assets/: LICENSE  license.rtf
installer_build/installer_build/1.0/: Setup-v1.msi  YtpDownloader_1.0.0.0_x64.msix
installer_build/output/: YouTubeDownloaderPro-Setup-v1.0.0.wixpdb
installer_build/scripts/: generate_wix.py
tests/: test_url_extraction.py  test_youtube_downloader.py
youtube_downloader/: __init__.py  main.py  run.py
youtube_downloader/app/: __init__.py
youtube_downloader/app/common/: __init__.py  config.py  logger.py  utils.py
youtube_downloader/app/components/: __init__.py  concurrent_playlist_worker.py  download_worker.py  playlist_worker.py
youtube_downloader/app/resource/: __init__.py  resource.py
youtube_downloader/app/view/: __init__.py  about_interface.py  download_history_interface.py  download_interface.py  history_interface.py  main_window.py  playlist_interface.py  settings_interface.py  single_download_interface.py
