[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ytp-downloader"
version = "1.0.0"
description = "A modern YouTube video and audio downloader built with PySide6-Fluent-Widgets"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "haseebahmed", email = "quicktiptech@gmail.com"}
]

[project.urls]
Homepage = "https://github.com/haseebahmed295/youtube-downloader-pro"
Repository = "https://github.com/haseebahmed295/youtube-downloader-pro"
Issues = "https://github.com/haseebahmed295/youtube-downloader-pro/issues"
keywords = ["youtube", "downloader", "video", "audio", "yt-dlp", "pyside6", "fluent-design"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
]

dependencies = [
    "PyQt-Fluent-Widgets[full]>=6.0.0",
    "yt-dlp>=2023.7.6",
    "ffmpeg-python>=0.2.0",
    "PySide6>=6.4.2",
    "PySideSix-Frameless-Window>=0.4.0",
    "darkdetect",
    "colorthief",
    "scipy",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]


[project.scripts]
ytp-downloader = "youtube_downloader.main:main"

[project.gui-scripts]
ytp-downloader-gui = "youtube_downloader.main:main"

[tool.setuptools]
packages = ["youtube_downloader", "youtube_downloader.app", "youtube_downloader.app.common", "youtube_downloader.app.components", "youtube_downloader.app.view", "youtube_downloader.app.resource"]

[tool.setuptools.package-data]
youtube_downloader = ["app/resource/**/*"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | PyQt-Fluent-Widgets-PySide6
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
